<resources>
    <string name="app_name">CleverPlayer</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="next">Next</string>
    <string name="disagree">Disagree</string>
    <string name="confirm">Confirm</string>
    <string name="complete">Complete</string>

    <string name="no_music">No Music</string>

    <string name="sign_in">Sign in with Google</string>

    <string name="setting_repeat">반복 재생</string>
    <string name="setting_background_play">백그라운드 재생</string>
    <string name="setting_version">버전 정보</string>
    <string name="setting_clear_cache">캐시 지우기</string>
    <string name="setting_log_out">로그 아웃</string>


    <string name="toast_replace_playlist">플레이리스트가 변경되었습니다.</string>
</resources>
